--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Qi # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "en"  
 description: "Welcome to my blog"  # 一句话描述你的博客
-baseurl: ""
+baseurl: "/"
 url: "http://sparkqi"  # 此处填写你的博客地址 
 
 # About/contact
